# eduSignalFW

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eduSignalFW.sln  eduSignalFW.vcxproj  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32dev
esp_util/: CMakeLists.txt
esp_util/src/esp_util/: i2cDevice.hpp  i2cMaster.hpp  nvs.hpp  spiDevice.hpp  spiHost.hpp  system.hpp  transactionManager.hpp  wlan.hpp
include/esp_util/: i2cDevice.hpp  i2cMaster.hpp  nvs.hpp  spiDevice.hpp  spiHost.hpp  system.hpp  wlan.hpp
lcd_ui/: spi_lcd_touch_example_main.c
main/: CMakeLists.txt  main.cpp
main/config/: devices.h  spi.h  task.h
main/devices/: ADS1299.cpp  ADS1299.hpp  BHI160.cpp  BHI160.hpp  MAX30102.cpp  MAX30102.hpp  MCP3561.cpp  MCP3561.hpp  PCF8574.hpp  TSC2003.hpp
main/memory/: bdf_future.h  int.cpp  int.h  nvs.cpp  nvs.h  ring_buffer.cpp  ring_buffer.h  sensor_data.h  stack.cpp  stack.h
main/network/: bdf_plus.cpp  bdf_plus.h  common.h  sockets.cpp  sockets.h  tcp_client.cpp  tcp_client.h  telemetry_transmitter.cpp  telemetry_transmitter.h  wifi.cpp  wifi.hpp
main/tasks/: sensor_control.cpp  sensor_control.h  task_config.h  transmitter_task.cpp  transmitter_task.h
main/util/: defines.h  time.cpp  time.h  types.h
src/: CMakeLists.txt  i2cConfig.h  i2cConfig.hpp  main.cpp  spiConfig.h  spiConfig.hpp
src/config/: devices.h  i2c.h
src/devices/: ADS1299.cpp  ADS1299.hpp  BHI160.cpp  BHI160.hpp  MAX30102.cpp  MAX30102.hpp  MCP3561.cpp  MCP3561.hpp  PCF8574.cpp  PCF8574.hpp  TCS2003.hpp  TSC2003.cpp  TSC2003.hpp
src/display/: display.hpp  displayBuffer.hpp  displayConfig.h  displayConfig.hpp  image.hpp  initCommands.h  initCommands.hpp  pixel.h  pixel.hpp
src/memory/: int.cpp  int.h  ring_buffer.cpp  ring_buffer.h  stack.cpp  stack.h
src/network/: bdf_plus.cpp  bdf_plus.h  edf_plus.cpp  edf_plus.h  sockets.cpp  sockets.h  wifi.cpp  wifi.hpp
src/tasks/: sensor_control.cpp  sensor_control.h  task_config.h  telemetry_transmitter.cpp  telemetry_transmitter.h
src/util/: defines.h  literals.h  string_operations.h  types.h  utils.h
